# stlToOptimizedGlb

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  converter.cpp  converter.h  main.cpp
.github/workflows/: build-and-push-docker.yml
